--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -1,9 +1,9 @@
-<div id="formElement-{$htmlId}" class="fElement {$containerClass} {$class} {if $odd}odd{else}even{/if} {if $error}error{/if} {if $wizard.hasWizard}hasWizard{/if}" {if $style}style="{$style}"{/if}>
+<div id="formElement-{$htmlId}" class="fElement {$containerClass} {$class} {if $odd}odd{else}even{/if} {if $error}error{/if} {if $wizard !== false}hasWizard{/if}" {if $style}style="{$style}"{/if}>
 	<div id="formElement-{$htmlId}-labelbox" class="fLabel {if $required}required{/if} {if $error}error{/if}">
 		<label for="{$htmlId}" id="{$htmlId}-label">{Label $label}</label>
 		{if $required}<span class="required">*</span>{/if}
 	</div>
-	<div id="formElement-{$htmlId}-inputbox" class="fField{if $wizard.hasWizard} hasWizard{/if}">
+	<div id="formElement-{$htmlId}-inputbox" class="fField{if $wizard !== false} hasWizard{/if}">
 
 		{if $textBeforeField}
 			<span class="textBeforeField">{$textBeforeField}</span>
@@ -17,8 +17,9 @@
 			<span class="textAfterField">{$textAfterField}</span>
 		{/if}
 
-		{if $wizard.hasWizard}
-			<span title="{Label $wizard.wizardConf.title}" class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.action}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>
+		{if $wizard !== false}
+			{* <span title="{Label $wizard.title}" class="wizardIcon {$wizard.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.idRecord}', '{$htmlId}', '{$wizard.ext}', '{$wizard.controller}', '{$wizard.action}', '{$wizard.height}', '{$wizard.width}', '{Label $wizard.title}');"></span> *}
+			<span title="{Label $wizard.title}" class="wizardIcon createWizard{ucfirst($wizard.name)}" onclick='Todoyu.Form.openCreateWizard("{$htmlId}", {json_encode($wizard.jsParams)})'></span>
 			<div class="clear"></div>
 		{/if}
 		{if $error && $errorMessage}
