--- a/core/asset/css/contextmenu.css
+++ b/core/asset/css/contextmenu.css
@@ -48,3 +48,20 @@
 			font-size:10px;
 			cursor:default;
 		}
+
+
+
+/* -----------------------------------
+	Selected and disabled options
+   ----------------------------------- */
+ul.context-menu li a.selected,
+ul.context-submenu li a.selected {
+	background:url(../../asset/img/icons.png) no-repeat 12px -870px #c9dbd4;
+}
+
+.context-menu li a.disabled,
+.context-submenu li a.disabled {
+	cursor:default !important;
+	color:#999 !important;
+	background:url(../../asset/img/icons.png) repeat-x 0 -1540px !important;
+}
