--- a/core/asset/css/content.css
+++ b/core/asset/css/content.css
@@ -133,6 +133,7 @@ h1.headerLine.hasIcon span.title {
 .headerLine {
 	position:relative;
 	margin-top:5px;
+	padding-left: 3px;
 	width:100%;
 	height:28px;
 	background:url('../img/bg-headerline.png') no-repeat 0 0;
@@ -146,7 +147,7 @@ h1.headerLine.hasIcon span.title {
 }
 
 .headerLine span.first {
-	padding:0 0 0 20px;
+	padding:0 0 0 17px;
 }
 
 .headerLine span.rgt {
