--- a/core/asset/css/headlet-about.css
+++ b/core/asset/css/headlet-about.css
@@ -57,7 +57,7 @@
 	}
 
 	#popup-about .creditsbox {
-		border:1px dotted #ccc;
+		border:1px solid #ddd;
 		height:150px;
 		clear:left;
 		margin:0 0 0 6px;
