--- a/core/view/timerange.tmpl
+++ b/core/view/timerange.tmpl
@@ -6,8 +6,8 @@
 	</div>
 	<div class="bar">
 		<div class="track trackStart"></div><div class="track slider" id="{$id}-slider">
-			<div class="handle" id="{$id}-handle-start"></div>
-			<div class="handle" id="{$id}-handle-end"></div>
+			<div class="handle handleStart" id="{$id}-handle-start"></div>
+			<div class="handle handleEnd" id="{$id}-handle-end"></div>
 			<div class="span" id="{$id}-span"></div>
 		</div><div class="track trackEnd"></div>
 	</div>
@@ -18,7 +18,7 @@
 		</div>
 		<div class="ranges">
 			<span class="chooseRange">Choose Time Range</span>
-			<ul style="display:none">
+			<ul>
 				<li class="monthToDate">Month to date</li>
 				<li class="yearToDate">Year to date</li>
 				<li class="quarterToDate">Quarter to date</li>
