* added new "generate" icon to core icons * extended template of form field type "comment" to allow for custom CSS classnames

--- a/core/asset/css/button.css
+++ b/core/asset/css/button.css
@@ -92,6 +92,9 @@ button.exclamation .icon {
 	background:url(../img/icons.png) no-repeat 0 -386px;
 }
 
+button.generate .icon {
+	background:url(../img/icons.png) no-repeat 0 -1629px;
+}
 
 /* ---------------------------
 	Center save buttons
