--- a/core/view/form/FormElement_Button.tmpl
+++ b/core/view/form/FormElement_Button.tmpl
@@ -2,7 +2,7 @@
 
 {block name="field"}
 
-<button class="button {$inputClass} {$class}" type="{$type|default:button}" id="{$htmlId}" {if $disable}disabled="disabled"{/if} {if $onclick}onclick="{$onclick}{if $disable};this.onclick=''{/if};this.blur()"{/if} title="{if $title}{Label $title}{else}{Label $text}{/if}">
+<button class="button {$inputClass} {$class}" type="{$type|default:button}" id="{$htmlId}" {if $disabled}disabled="disabled"{/if} {if $onclick}onclick="{$onclick}{if $disable};this.onclick=''{/if};this.blur()"{/if} title="{if $title}{Label $title}{else}{Label $text}{/if}">
 	{if ! $noIcon}
 		<span class="icon"></span>
 	{/if}
