--- a/core/asset/css/headlet-ajaxloader.css
+++ b/core/asset/css/headlet-ajaxloader.css
@@ -8,3 +8,11 @@
 	background:url(../img/ajax-loader.gif) no-repeat 7px 5px;
 	border:none;
 }
+
+li#todoyuheadletajaxloader a {
+	cursor:wait;
+}
+
+#todoyuheadletajaxloader a:hover {
+	background-color:transparent !important;
+}
