--- a/core/view/template/system.php.tmpl
+++ b/core/view/template/system.php.tmpl
@@ -24,5 +24,6 @@ Todoyu::$CONFIG['SYSTEM']['email']		= '{addslashes($email)}';
 Todoyu::$CONFIG['SYSTEM']['locale']		= '{$locale}';
 Todoyu::$CONFIG['SYSTEM']['timezone']	= '{$timezone}';
 Todoyu::$CONFIG['SYSTEM']['todoyuURL']	= '{$todoyuURL}';
+Todoyu::$CONFIG['SYSTEM']['loglevel']	= {$logLevel};
 
 Todoyu::$CONFIG['SYSTEM']['encryptionKey']	= '{$encryptionKey}';
