--- a/core/asset/css/wizard.css
+++ b/core/asset/css/wizard.css
@@ -1,5 +1,7 @@
-.wizard {
+.wizard * {
 	text-align:left;
+	font-size:12px;
+
 }
 
 .wizard .navi,
@@ -7,41 +9,43 @@
 .wizard .help {
 	float:left;
 	clear:none;
+
 }
 
 .wizard .navi {
 	width:180px;
-	height:520px;
-	background-color:#E3EACE;
-}
-
-.wizard .navi ul {
-	margin-left:20px;
-	margin-top:20px;
-	text-align:left;
-	list-style-type:square;
-	list-style-position:inside;
-}
-
-.wizard .navi ul li {
-	font-size:12px;
-	font-weight:bold;
-	padding:5px;
-}
-
-.wizard .navi ul li.active {
 	background-color:#F6F8F1;
 }
 
-.wizard .navi ul li.done {
+.wizard .navi ol {
+	margin-left:25px;
+	margin-top:20px;
+	text-align:left;
+}
+
+.wizard .navi ol li {
+	padding:5px;
+	color:#A5A5A5;
+}
+
+.wizard .navi ol li.active {
+	background-color:#fff;
+	color:#000;
+	font-weight:bold;
+
+}
+
+.wizard .navi ol li.done {
 	cursor:pointer;
+	color:#000;
 }
 
 .wizard .content {
 	padding:20px;
-	width:460px;
-	height:480px;
+	width:420px;
+	height:460px;
 	overflow:auto;
+	background-color:#FFF;
 }
 
 .wizard .content h1.title {
@@ -51,26 +55,22 @@
 }
 
 .wizard .content p.info {
-	border-bottom:1px dashed #CCC;
 	margin:10px 0;
 	padding-bottom:10px;
 }
 
 .wizard .help {
 	width:209px;
-	height:500px;
-	padding-top:60px;
+	margin-top:60px;
 	padding-left:10px;
-	background-color:#EFEFEF;
-	border-left:1px solid #000;
+
 }
 
 .wizard .buttons {
 	float:left;
 	clear:both;
 	width:100%;
-	border-top:1px solid #000;
-	background-color:#FFF;
+	background-color:#F6F8F1;
 	padding:10px 0;
 }
 
