* Fix name of library in license list * Changed release date * Added log to directory write check list

--- a/install/view/01_license.tmpl
+++ b/install/view/01_license.tmpl
@@ -11,7 +11,7 @@
 		<h2>{Label install.installer.license.lgpl}</h2>
 		<ul class="thirdPartyLibs">
 			<li>jsCalendar</li>
-			<li>phpMail</li>
+			<li>phpMailer Lite</li>
 			<li>TinyMCE</li>
 		</ul>
 
