* bugfix: assigned person color wasnt rendered for fullday-events * visual improvement: made active navigation tab clearlier highlighted/ noticeable

--- a/core/asset/css/tab.css
+++ b/core/asset/css/tab.css
@@ -7,6 +7,13 @@
 	top:-35px;
 	width:663px;
 }
+	#content-tabs li p.label span.labeltext {
+	  color:#444;
+	}
+	#content-tabs li.active p.label span.labeltext,
+	#content-tabs li p.label:hover span.labeltext {
+	  color:#000;
+	}
 
 #content .tabs {
 	z-index:2;
