--- a/core/asset/css/navi.css
+++ b/core/asset/css/navi.css
@@ -34,6 +34,13 @@ ul#navi-main-list li a {
 	background-image:url('../img/shadow.png');
 	background-position:50% 100%;
 }
+	#navi-main-list li.item a {
+		  color:#333;
+	}
+	#navi-main-list li.item a.active,
+	#navi-main-list li.item a:hover {
+		color:#000;
+	}
 
 ul#navi-main-list li a span.lt {
 	display:block;
