* translation: added German to form legends * translation: added Germon to first steps wizard * general clean up while translating

--- a/core/config/form/role.xml
+++ b/core/config/form/role.xml
@@ -9,7 +9,7 @@
 	</hiddenFields>
 	<fieldsets>
 		<fieldset name="main">
-			<legend>Main role data</legend>
+			<legend>core.form.legend.main</legend>
 			<elements>
 
 				<field type="text" name="title">
