--- a/core/view/wizard.tmpl
+++ b/core/view/wizard.tmpl
@@ -33,7 +33,7 @@
 
 	<div class="buttons">
 		<div class="close">
-			<a href="javascript:void(0)" onclick="Todoyu.Wizard.close()">Close wizard</a>
+			{Button label="LLL:core.global.wizard.close" class="close" onclick="Todoyu.Wizard.close()"}
 		</div>
 		<div class="main">
 			{if !$isFirst}
