* changed link to forum * added utm tracking to external links

--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -6,15 +6,15 @@
 				{Label core.global.footer.version}: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
 			{/if}
 			<a href="https://code.todoyu.com/wiki/bugtracker" target="_blank" title="{Label core.global.footer.bugreport.title}">{Label core.global.footer.bugreport}</a> |
-			<a href="http://www.todoyu.com/en/message-board/forum/" target="_blank" title="{Label core.global.footer.forum.title}">{Label core.global.footer.forum}</a><br />
+			<a href="http://www.todoyu.com/community/forum/?utm_source={constant(TODOYU_VERSION)}&utm_medium=web&utm_campaign=todoyu" target="_blank" title="{Label core.global.footer.forum.title}">{Label core.global.footer.forum}</a><br />
 		</div>
 		<div id="footer-logo">
-			<a href="http://www.todoyu.com" target="_blank" title="todoyu | get tasks done with your team"><img src="core/asset/img/logo.png" alt="todoyu" width="85" height="60" border="0" /></a>
+			<a href="http://www.todoyu.com/?utm_source={constant(TODOYU_VERSION)}&utm_medium=web&utm_campaign=todoyu" target="_blank" title="todoyu | get tasks done with your team"><img src="core/asset/img/logo.png" alt="todoyu" width="85" height="60" border="0" /></a>
 		</div>
 		<div id="footer-address">
-			<a href="http://www.todoyu.com/" target="_blank">&copy; <strong>todoyu</strong></a> by <a href="http://www.snowflake.ch/" target="_blank">snowflake productions GmbH</a><br />
+			<a href="http://www.todoyu.com/?utm_source={constant(TODOYU_VERSION)}&utm_medium=web&utm_campaign=todoyu" target="_blank">&copy; <strong>todoyu</strong></a> by <a href="http://www.snowflake.ch/?utm_source={constant(TODOYU_VERSION)}&utm_medium=web&utm_campaign=todoyu" target="_blank">snowflake productions GmbH</a><br />
 			<a href="mailto:feedback@todoyu.com">feedback@todoyu.com</a><br />
-			<a href="http://www.todoyu.com/" target="_blank">www.todoyu.com</a>
+			<a href="http://www.todoyu.com/?utm_source={constant(TODOYU_VERSION)}&utm_medium=web&utm_campaign=todoyu" target="_blank">www.todoyu.com</a>
 		</div>
 	</div>
 </div>
