--- a/core/view/form/FormElement_SelectGrouped.tmpl
+++ b/core/view/form/FormElement_SelectGrouped.tmpl
@@ -6,22 +6,16 @@
 		<option value="0">{Label core.form.select.pleaseSelect}</option>
 		<option value="0" disabled="disabled">---------------------------</option>
 	{/if}
-	{$anySelected = false}
 	{foreach $options label group}
 		{if $label != "none"}
 			<optgroup label="{$label}">
 		{/if}
 		{foreach $group option}
-			{if $anySelected == false}
+			{$isSelected = false}
 				{if in_array($option.value, $valueTemplate)}
 					{$isSelected =  true}
-					{$anySelected = true}
-				{else}
-					{$isSelected = false}
+					{$valueTemplate	= unsetArrayValue($valueTemplate,$option.value)}
 				{/if}
-			{else}
-				{$isSelected = false}
-			{/if}
 			<option value="{htmlencode $option.value}" {if $option.classname != ""}class="{$option.classname}"{/if} {if $isSelected} selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
 		{/foreach}
 		{if $label != "none"}
