--- a/core/view/email-html.tmpl
+++ b/core/view/email-html.tmpl
@@ -8,20 +8,26 @@ body, p {
 	margin:0;
 	padding:0;
 	font-family:Arial, Helvetica, sans-serif;
-	font-size:11px;
+	font-size:12px;
 }
 body {
 	background-color:#F8FFF0;
 }
 td {
 	font-family:Arial, Helvetica, sans-serif;
-	font-size:11px;
+	font-size:12px;
 	vertical-align:top;
+	padding:5px;
+}
+
+td.label {
+	white-space:nowrap;
+	font-weight:bold;
 }
 
 .mailHeader {
-	background-color:#EEE;
-	padding:10px;
+	background-color:#F8FFF0;
+	padding:10px 0 10px 20px;
 	font-weight:bold;
 	font-size:12px;
 }
@@ -29,10 +35,12 @@ td {
 	border-top:1px solid #000;
 	border-bottom:1px solid #000;
 	padding:10px;
+	background-color:#fff;
 }
 .mailFooter {
-	padding:10px;
-	background-color:#EEE;
+	padding:10px 0 0 20px;
+	background-color:#F8FFF0;
+	font-size:10px;
 }
 {foreach $cssStyles cssStyle}
 	{$cssStyle}
@@ -43,16 +51,18 @@ td {
 </head>
 
 <body>
+
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td class="mailHeader">{$headline|default:$subject}</td>
-  </tr>
-  <tr>
-    <td class="mailContent">{$content}</td>
-  </tr>
-  <tr>
-    <td class="mailFooter">This email was send with todoyu: <a href="{constant(TODOYU_URL)}">{constant(TODOYU_URL)}</a></td>
-  </tr>
+	<tr>
+			<td class="mailHeader">{$headline|default:$subject}</td>
+	</tr>
+	<tr>
+			<td class="mailContent">{$content}</td>
+	</tr>
+	<tr>
+			<td class="mailFooter">This email was sent with todoyu: <a href="{constant(TODOYU_URL)}">{constant(TODOYU_URL)}</a></td>
+	</tr>
 </table>
+
 </body>
 </html>
