* grrrr, dotted line...

--- a/core/asset/css/headlet-quickcreate.css
+++ b/core/asset/css/headlet-quickcreate.css
@@ -3,7 +3,7 @@
 }
 
 #todoyuheadletquickcreate .content li.primary {
-	border-bottom:1px dotted #b9bbad;
+	border-bottom:1px solid #ddd;
 	background-color:#edf0df;
 }
 
