--- a/core/view/timerange.tmpl
+++ b/core/view/timerange.tmpl
@@ -26,13 +26,14 @@
 				<li class="previousQuarter">Previous quarter</li>
 				<li class="fullTimeRange">Full Time Range</li>
 			</ul>
+			<span class="rgt"></span>
 		</div>
 		<div class="end">
 			<input type="text" id="{$id}-end" name="{$name}[end]" />
 			<div class="icon link calendaricon" id="{$id}-end-calicon" title="{Label core.form.dateselector.open}" alt="{Label form.dateselector.open}"></div>
 		</div>
 	</div>
-	<input type="text" id="{$id}-focus" style="opacity:0;width:1px;height:1px" />
+	<input type="text" id="{$id}-focus" style="opacity:0;visibility:hidden;width:1px;height:1px" />
 </div>
 
 <script type="text/javascript">
