--- a/core/asset/css/content.css
+++ b/core/asset/css/content.css
@@ -64,7 +64,9 @@ ul.ulList {}
 ul.ulList li.listItem {
 	overflow:hidden;
 	list-style:none;
-	line-height:18px;
+	line-height:15px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 }
 * html ul.ulList li.listItem {
 	overflow:visible;
