--- a/core/view/timerange.tmpl
+++ b/core/view/timerange.tmpl
@@ -17,14 +17,15 @@
 			<div class="icon link calendaricon" id="{$id}-start-calicon" title="{Label core.form.dateselector.open}" alt="{Label form.dateselector.open}"></div>
 		</div>
 		<div class="ranges">
-			<span class="chooseRange">Choose Time Range</span>
+			<span class="chooseRange">{Label core.form.daterange.choose}</span>
 			<ul>
-				<li class="monthToDate">Month to date</li>
-				<li class="yearToDate">Year to date</li>
-				<li class="quarterToDate">Quarter to date</li>
-				<li class="previousMonth">Previous month</li>
-				<li class="previousQuarter">Previous quarter</li>
-				<li class="fullTimeRange">Full Time Range</li>
+				<li class="monthToDate">{Label core.form.daterange.monthToDate}</li>
+				<li class="quarterToDate">{Label core.form.daterange.quarterToDate}</li>
+				<li class="yearToDate">{Label core.form.daterange.yearToDate}</li>
+				<li class="previousMonth">{Label core.form.daterange.previousMonth}</li>
+				<li class="previousQuarter">{Label core.form.daterange.previousQuarter}</li>
+				<li class="previousYear">{Label core.form.daterange.previousYear}</li>
+				<li class="fullTimeRange">{Label core.form.daterange.fullTimeRange}</li>
 			</ul>
 			<span class="rgt"></span>
 		</div>
