* fixed ie9 layout bug

--- a/core/view/pageheader.tmpl
+++ b/core/view/pageheader.tmpl
@@ -29,6 +29,10 @@
 	<link rel="stylesheet" media="screen" href="core/asset/css/compatibility/ie8.css" />
 <![endif]-->
 
+<!--[if IE 9]>
+	<link rel="stylesheet" media="screen" href="core/asset/css/compatibility/ie8.css" />
+<![endif]-->
+
 
 <link rel="shortcut icon" href="favicon.ico" />
 </head>
