* added style for hyperlinks inside comment form elements

--- a/core/asset/css/form.css
+++ b/core/asset/css/form.css
@@ -231,6 +231,10 @@ div.fElement {
 		}
 
 
+.fField span.commenttext a,
+.fField span.commenttext a:link {
+	text-decoration:underline;
+}
 
 /* -------------
 	Types
