--- a/core/view/form/FormElement_RTE.tmpl
+++ b/core/view/form/FormElement_RTE.tmpl
@@ -1,7 +1,7 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-<textarea name="{$htmlName}" id="{$htmlId}" cols="{$cols}" rows="{$rows}" class="{$inputClass} {$class}">{htmlencode $valueTemplate true}</textarea>
+<textarea name="{$htmlName}" id="{$htmlId}" cols="{$cols}" rows="{$rows}" class="{$inputClass} {$class}">{htmlencode(cleanHtml($valueTemplate), true)}</textarea>
 <script type="text/javascript">
 {$rteJs}
 </script>
