--- a/core/asset/css/timepicker.css
+++ b/core/asset/css/timepicker.css
@@ -60,7 +60,7 @@
 }
 
 .durationPickerIcon {
-	background:url(../img/durationwizard.png) no-repeat 0 0;
+	background:url(../img/icons.png) no-repeat 0 -1660px;
 	cursor:pointer;
 	margin-left:3px;
 }
