* Changed: Tabs are now cropped in javascript and use dynamically as much space as available. Removed template label cropping for tabs * Added: Array.prototype.sum()

--- a/core/view/tabhead.tmpl
+++ b/core/view/tabhead.tmpl
@@ -2,6 +2,6 @@
 	<p id="{$name}-tab-{$tab.id}-label" class="label">
 		<span class="lt"><!-- --></span>
 		<span class="icon"><!-- icon --></span>
-		<span class="labeltext">{htmlencode(cropText($tab.label,22,false))}</span>
+		<span class="labeltext">{htmlencode $tab.label}</span>
 	</p>
 </li>
