* Changed min version of php to 5.2.3 * Added 2.1.0 to version selector

--- a/install/view/version-selector.tmpl
+++ b/install/view/version-selector.tmpl
@@ -30,11 +30,14 @@
 			<option>2.0.8</option>
 			<option selected="selected">2.0.9</option>
 		</optgroup>
-		<optgroup label="2.1">
+		<optgroup label="2.1 (preview)">
 			<option>2.1.0b3</option>
 			<option>2.1.0b4</option>
 			<option>2.1.0rc1</option>
 			<option>2.1.0rc2</option>
+		</optgroup>
+		<optgroup label="2.1 (stable)">
+			<option>2.1.0</option>
 		</optgroup>
 	</select>
 	<input type="submit" value="Set last version and start normal update" />
