* Removed LLL: label prefixes

--- a/core/view/wizard.tmpl
+++ b/core/view/wizard.tmpl
@@ -33,14 +33,14 @@
 
 	<div class="buttons">
 		<div class="close">
-			{Button label="LLL:core.global.wizard.close" class="close" onclick="Todoyu.Wizard.close()"}
+			{Button label="core.global.wizard.close" class="close" onclick="Todoyu.Wizard.close()"}
 		</div>
 		<div class="main">
 			{if !$isFirst}
-				{Button label="LLL:core.global.wizard.back" class="back" onclick="Todoyu.Wizard.back()"}
+				{Button label="core.global.wizard.back" class="back" onclick="Todoyu.Wizard.back()"}
 			{/if}
 			{if !$isLast}
-				{Button label="LLL:core.global.wizard.next" class="next" onclick="Todoyu.Wizard.next()"}
+				{Button label="core.global.wizard.next" class="next" onclick="Todoyu.Wizard.next()"}
 			{/if}
 		</div>
 
