* Add no cache headers and meta tags to installer to prevent any caching

--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -13,6 +13,11 @@
 	<link rel="shortcut icon" href="../favicon.ico" />
 	<script language="javascript" type="text/javascript" src="../lib/js/prototype.js"></script>
 	<script language="javascript" type="text/javascript" src="asset/js/TodoyuInstaller.js"></script>
+
+	<meta http-equiv="expires" content="0" />
+	<meta http-equiv="cache-control" content="no-cache" />
+	<meta http-equiv="pragma" content="no-cache" />
+
 </head>
 	<body>
 		<div id="box">
