* Bugfix: (chrome) save button icon was cut-off by 1 pixel on the left

--- a/core/asset/css/button.css
+++ b/core/asset/css/button.css
@@ -68,7 +68,8 @@ button.edit .icon {
 }
 
 button.save .icon {
-	background:url(../img/icons.png) no-repeat 0 -208px;
+	background:url(../img/icons.png) no-repeat 1px -208px;
+	width:18px;
 }
 
 button.cancel .icon {
