--- a/core/asset/css/form.css
+++ b/core/asset/css/form.css
@@ -283,7 +283,8 @@ div.fElement {
 		}
 
 		.typeDatabaseRelation button.addForeignRecord .icon {
-			background:url(../img/icons.png) no-repeat 2px -568px;
+			background:url(../img/icons.png) no-repeat 6px -567px;
+			width:23px;
 		}
 
 		.typeDatabaseRelation .databaseRelation {
