* Fixes for CLI selenium

--- a/core/view/selenium-master.tmpl
+++ b/core/view/selenium-master.tmpl
@@ -10,7 +10,7 @@
 <tr><td><b>Test Suite</b></td></tr>
 {foreach $allTests extKey tests}
 	{foreach $tests test}
-		<tr><td><a href="../../{$test.path}">{$test.name}</a></td></tr>
+		<tr><td><a href="{$test.path}">{$test.name}</a></td></tr>
 	{/foreach}
 {/foreach}
 </tbody></table>
