* Added latest versions to version selector

--- a/install/view/version-selector.tmpl
+++ b/install/view/version-selector.tmpl
@@ -38,6 +38,8 @@
 		</optgroup>
 		<optgroup label="2.1 (stable)">
 			<option selected="selected">2.1.0</option>
+			<option selected="selected">2.1.1</option>
+			<option selected="selected">2.1.2</option>
 		</optgroup>
 	</select>
 	<input type="submit" value="Set last version and start normal update" />
